--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <!-- link -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
@@ -19,6 +19,10 @@
                 <h3>"This is a new part of my project 'Calculator', but here I wrote it using HTML, CSS, and
                     JavaScript."
                 </h3>
+                <h4>Resources and repository belong to the project.</h4>
+                <a class="coffy" href="https://github.com/Haoz-Rundrego/Calculator">This calculator and others are
+                    written in
+                    different languages.</a>
             </div>
             <section class="work_place">
                 <div class="Lable">
